Adds block falling as well as a on click to change direction

--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script type="text/javascript" src="dist/bundle.js" charset="utf-8" defer></script>
     <title>Code Question Block game</title>
+    <style type="text/css">
+        canvas {
+            border: 1px solid black;
+            background: yellowgreen
+        }
+
+        body {
+            margin: 0px
+        }
+    </style>
 </head>
 <body>
     <canvas id="canvas-area"></canvas>
+    <script src="./src/index.js"></script>
 </body>
 </html>
